# pdf-accessibility-app

./: .dockerignore  .env.example  .gitignore  ACCESSIBILITY_COVERAGE.md  Dockerfile  README.md  compose.yaml
backend/: README.md  pyproject.toml  verapdf-auto-install.xml
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/api/: documents.py  health.py  jobs.py  review.py  router.py
backend/app/pipeline/: alt_text.py  classify.py  fidelity.py  language.py  llm_operations.py  ocr.py  orchestrator.py  structure.py  subprocess_utils.py  tagger.py  validator.py
backend/app/services/: anonymous_sessions.py  applied_changes.py  auto_review_apply.py  auto_structure_apply.py  bookmark_intelligence.py  docling_escalation.py  document_intelligence.py  document_intelligence_models.py  early_pages_intelligence.py  file_storage.py  font_actualtext.py  font_artifact.py  font_intelligence_auto.py  font_review_auto.py  font_unicode_override.py  form_fields.py  gemini_direct.py  gemini_direct_experiment.py  grounded_text_apply.py  (+41 more)
backend/scripts/: adobe_accessibility_check.py  corpus_benchmark.py  gemini_cached_pdf_experiment.py  gemini_canonical_spike.py  generate_pdfua_rule_coverage.py  local_figure_context_probe.py  roundtrip_compare.py  roundtrip_corpus_benchmark.py  runtime_diagnostics.py  strip_accessibility.py
backend/tests/: fixtures.py  test_adobe_accessibility_check.py  test_applied_changes.py  test_auto_structure_apply.py  test_bookmark_intelligence.py  test_classify.py  test_corpus_benchmark.py  test_corpus_benchmark_profiles.py  test_database_migrations.py  test_docling_escalation.py  test_document_intelligence.py  test_documents.py  test_early_pages_intelligence.py  test_fidelity.py  test_file_storage.py  test_font_actualtext.py  test_font_artifact.py  test_font_remediation.py  test_font_unicode_override.py  test_form_fields.py  test_gemini_direct.py  test_gemini_direct_experiment.py  test_intelligence_gemini_figures.py  test_intelligence_gemini_forms.py  test_intelligence_gemini_pages.py  test_intelligence_gemini_reading_order.py  test_intelligence_gemini_semantics.py  test_intelligence_gemini_tables.py  test_intelligence_gemini_toc.py  test_intelligence_gemini_widgets.py  test_intelligence_llm_utils.py  test_intelligence_merge.py  test_job_manager.py  test_jobs_api.py  test_llm_client.py  test_llm_operations.py  test_local_semantic.py  test_main.py  test_ocr.py  test_orchestrator_alt_text.py  (+29 more)
(+65 files in other folders)
